--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simplefolio",
+  "name": "thaliva",
   "version": "1.0.1",
   "private": "true",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "popper.js": "^1.16.1",
     "vanilla-tilt": "^1.7.2"
   }
